fixed css and alignment

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #F2F2F2; 
-  color: #728684; 
+  color: #20381E; 
   line-height: 1.6;
 }
 
@@ -61,12 +61,13 @@ main {
   font-size: 32px; 
   margin-bottom: 20px;
   color: #20381E; 
+  text-align: center;
 }
 
 .intro-section p {
   font-size: 16px;
   margin-bottom: 20px;
-  color: #0D0D0D; 
+  color: #20381E; 
 }
 
 /* Image */
@@ -129,7 +130,48 @@ footer {
 }
 
 .portfolio-item h3 {
-  color: #4A5259;
+  color: #20381E;
   font-size: 24px;
   margin-bottom: 10px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.about-section {
+  max-width: 80%;
+  text-align: left;
+  margin-bottom: 40px;
+}
+
+.about-section h1 {
+  font-size: 24px; 
+  margin-bottom: 20px;
+  color: #20381E; 
+  text-align: center;
+}
+.about-section h2 {
+  color: #20381E; 
+  text-align: center;
+}
+
+.about-section p {
+  font-size: 16px;
+  margin-bottom: 20px;
+  color: #20381E; 
+}
+
+ul {
+  display: flex;
+  align-content: center;
+  padding: 15px;
+}
+
+li {
+ margin: auto;
+  padding: 15px;
 }
